Use Nashorn Maven artifact
Nashorn Script Engine was removed in Java 15, so Shimeji-ee couldn't work on versions past Java 14 before. By using this artifact, Shimeji-ee should finally work on the latest Java LTS version, Java 21. Might consider switching from Nashorn to GraalVM JavaScript, though, since it may perform better.